<!-- 
 * Copyright (C) 2011-2013 Eiichiro Uchiumi. All Rights Reserved.
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
  	<groupId>org.sonatype.oss</groupId>
  	<artifactId>oss-parent</artifactId>
  	<version>7</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.eiichiro.bootleg</groupId>
  <artifactId>bootleg</artifactId>
  <version>0.5.2-SNAPSHOT</version>
  <name>Bootleg</name>
  <description>Java Web Components</description>
  <url>http://bootleg.eiichiro.org/</url>
  <licenses>
  	<license>
  		<name>The Apache Software License, Version 2.0</name>
  		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
  		<distribution>repo</distribution>
  	</license>
  </licenses>
  <scm>
  	<connection>scm:git:git@github.com:eiichiro/bootleg.git</connection>
  	<url>scm:git:git@github.com:eiichiro/bootleg.git</url>
  	<developerConnection>scm:git:git@github.com:eiichiro/bootleg.git</developerConnection>
  </scm>
  <developers>
  	<developer>
  		<id>eiichiro</id>
  		<name>Eiichiro Uchiumi</name>
  		<email>eiichiro.uchiumi@gmail.com</email>
  	</developer>
  </developers>
  <build>
  	<plugins>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-compiler-plugin</artifactId>
  			<version>2.3.2</version>
  			<configuration>
  				<source>1.8</source>
  				<target>1.8</target>
  			</configuration>
  		</plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-javadoc-plugin</artifactId>
  			<version>2.8</version>
  			<configuration>
  				<bottom><![CDATA[Copyright © 2011-2022 <a href="mailto:eiichiro@eiichiro.org">Eiichiro Uchiumi</a>. All Rights Reserved.]]></bottom>
  				<doctitle>${project.name} ${project.version} API Specifications</doctitle>
  				<source>1.8</source>
  			</configuration>
  		</plugin>
  	</plugins>
  	<pluginManagement>
  		<plugins>
  			<!-- This plugin's configuration is used to store Eclipse m2e settings only. 
  			It has no influence on the Maven build itself. -->
  			<plugin>
  				<groupId>org.eclipse.m2e</groupId>
  				<artifactId>lifecycle-mapping</artifactId>
  				<version>1.0.0</version>
  				<configuration>
  					<lifecycleMappingMetadata>
  						<pluginExecutions>
  							<pluginExecution>
  								<pluginExecutionFilter>
  									<groupId>org.apache.maven.plugins</groupId>
  									<artifactId>maven-enforcer-plugin</artifactId>
  									<versionRange>1.0</versionRange>
  									<goals>
  										<goal>enforce</goal>
  									</goals>
  								</pluginExecutionFilter>
  								<action>
  									<ignore />
  								</action>
  							</pluginExecution>
  						</pluginExecutions>
  					</lifecycleMappingMetadata>
  				</configuration>
  			</plugin>
  		</plugins>
  	</pluginManagement>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>slf4j-api</artifactId>
  		<version>1.6.2</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>jcl-over-slf4j</artifactId>
  		<version>1.6.2</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>ch.qos.logback</groupId>
  		<artifactId>logback-classic</artifactId>
  		<version>0.9.30</version>
  		<type>jar</type>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.eiichiro.reverb</groupId>
  		<artifactId>reverb</artifactId>
  		<version>1.2.2-SNAPSHOT</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>javax.servlet</groupId>
  		<artifactId>servlet-api</artifactId>
  		<version>2.5</version>
  		<type>jar</type>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>com.google.guava</groupId>
  		<artifactId>guava</artifactId>
  		<version>r09</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.eclipse.jetty</groupId>
  		<artifactId>jetty-servlet-tester</artifactId>
  		<version>7.0.0.M2</version>
  		<type>jar</type>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>commons-beanutils</groupId>
  		<artifactId>commons-beanutils</artifactId>
  		<version>1.8.3</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>com.google.code.gson</groupId>
  		<artifactId>gson</artifactId>
  		<version>1.7.1</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>commons-lang</groupId>
  		<artifactId>commons-lang</artifactId>
  		<version>2.6</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.10</version>
  		<type>jar</type>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.javassist</groupId>
  		<artifactId>javassist</artifactId>
  		<version>3.15.0-GA</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
	<dependency>
		<groupId>javax.xml.bind</groupId>
		<artifactId>jaxb-api</artifactId>
		<version>2.3.1</version>
	</dependency>
	<dependency>
		<groupId>org.glassfish.jaxb</groupId>
		<artifactId>jaxb-runtime</artifactId>
		<version>2.3.1</version>
	</dependency>
	<dependency>
		<groupId>javax.activation</groupId>
		<artifactId>activation</artifactId>
		<version>1.1.1</version>
	</dependency>
  </dependencies>
</project>